[project]
name = "ai-cs50-harvard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cython>=3.0.12",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pgmpy>=1.0.0",
    "pillow>=11.2.1",
    "pomegranate>=1.1.2",
    "torchegranate>=0.5.0",
]
